fix(CommandPanel): Adjust contrast

--- a/packages/forma-36-react-components/src/components/CommandPanel/CommandPanel.css
+++ b/packages/forma-36-react-components/src/components/CommandPanel/CommandPanel.css
@@ -7,7 +7,7 @@
   display: block;
   background: #fff;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1), 0 5px 10px -5px rgba(0, 0, 0, 0.3);
-  border: 1px solid #ddd;
+  border: 1px solid var(--color-element-dark);
   border-radius: 3px;
   list-style: none;
   margin: 0;
@@ -22,13 +22,26 @@
   font-size: calc(1rem * (14 / var(--font-base-default)));
   line-height: var(--line-height-default);
   padding: var(--spacing-s) var(--spacing-xs);
+  border-bottom: 1px solid var(--color-element-dark);
+  margin: 0;
+  color: var(--color-text-dark);
+}
+
+.CommandPanel__divider {
+  font-weight: var(--font-weight-demi-bold);
+  padding: var(--spacing-s) var(--spacing-xs);
+  letter-spacing: var(--letter-spacing-wide);
+  font-size: calc(1rem * (12 / var(--font-base-default)));
+  text-transform: uppercase;
   border-bottom: 1px solid #ddd;
   margin: 0;
+  line-height: var(--line-height-default);
+  color: var(--color-text-dark);
 }
 
 .CommandPanel__item--is-selected,
 .CommandPanel__item:hover {
-  background: #f7f9fa;
+  background: var(--color-element-light);
 }
 
 .CommandPanel__item:last-child {
